# mvp-policy-decisions-backend

./: .coveragerc  .dockerignore  .gitignore  .gpg-setup-complete  .pre-commit-config.yaml  .secrets.baseline  .trufflehogignore  AGENT_01_DATABASE_AUDIT_REPORT.md  AGENT_5_SUMMARY.md  CLAUDE.md  CODEBASE_ANALYSIS_REPORT.md  COMMERCIAL-LICENSE.md  COMMIT_STRATEGY_DECISION.md  CONTRIBUTING.md  DATABASE_SCHEMA_SUMMARY.md  DATA_SEEDING_REPORT.md  DEMO-README.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_SUMMARY.md  Dockerfile  IMMEDIATE_WINS_STRATEGY.md  LICENSE  LICENSE-NOTICE.md  Makefile  QUALITY_GATES_ANALYSIS.md  QUALITY_GATES_DOMAIN_ANALYSIS.md  README.md  SECURITY_IMPROVEMENTS.md  SSO_AUDIT_REPORT.md  VIN_DECODER_STATUS.md  WAVE_1_CONTEXT.md  WEBSOCKET_IMPLEMENTATION_REPORT.md  alembic.ini  app.sh  audit_models.py  bandit-report.json  celery_app.py  celery_migrate.py  demo-quickstart.sh  demo-railway-quickstart.sh  (+31 more)
.cursor/: extensions.json  settings.json
.cursor/rules/: master-ruleset.mdc
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.githooks/: pre-commit  pre-push  prepare-commit-msg
.github/workflows/: claude-code-review.yml  claude.yml  deploy-production.yml  deploy-staging.yml  master-ruleset-enforcement.yml  monitoring-alerts.yml  performance-budget.yml  performance-monitoring.yml  pre-commit.yml  security-monitoring.yml
.sage/: MASTER_INSTRUCTION_SET.md  learned_patterns.json  reusable_components_guide.md  wave_2_best_practices.md
.sage/source_documents/: DEMO_OVERALL_ARCHITECTURE.md  DEMO_OVERALL_IMPLEMENTATION_PLAN.md  DEMO_OVERALL_PRD.md  DEMO_OVERALL_ROADMAP.md  DEMO_OVERALL_TECH_STACK.md
.sage/wave_contexts/: UPGRADE_PATH.md  wave_2.5_deployment_plan.md
.sage/wave_contexts/current/: WAVE_TEMPLATE.md
.sage/wave_contexts/wave_1/: WAVE_1_FINAL_READY.md  WAVE_1_READY.md
.sage/wave_contexts/wave_2/: AGENT_DEPLOYMENT_SUMMARY.md  WAVE_2_ENTERPRISE_IMPLEMENTATION.md  WAVE_2_INTEGRATION_PLAN.md  WAVE_2_RATING_ENGINE_DESIGN.md  WAVE_2_REALTIME_WEBSOCKET.md  WAVE_2_SECURITY_ARCHITECTURE.md
.sage/wave_contexts/wave_2.5/: COORDINATION_SUMMARY.md  PRE_COMMIT_ISSUES.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_users_and_quote_system_tables.py  003_add_rating_engine_tables.py  004_add_security_compliance_tables.py  005_add_realtime_analytics_tables.py  006_add_admin_system_tables.py  007_add_sso_integration_tables.py  008_add_websocket_performance_tables.py  009_add_missing_oauth2_tables.py  010_add_rating_engine_versioning_tables.py  011_modularize_user_tables.py  012_add_users_compatibility_view.py  013_add_websocket_priority_metrics.py
config/: pgbouncer.ini  pgbouncer.service  pgbouncer_userlist.txt.example  postgresql_optimization.conf  postgresql_optimized.conf
core/communication/message-queue/: AGENT_01_DATABASE_AUDIT_REPORT.md  agent-01-update-20250105-complete.md  agent-01-update-20250105-initial.md  agent_01_database_migration_status.md  agent_06_rating_engine_final_status.md  agent_09_sso_integration_status.md  agent_10_oauth2_server_completion.md
docs/: API.md  ARCHITECTURE.md  CONNECTION_POOL_OPTIMIZATION.md  DATABASE_OPTIMIZATION.md  DEPLOYMENT.md  DEVELOPMENT.md  MFA_IMPLEMENTATION.md  PERFORMANCE.md  SECURITY.md  SOC2_COMPLIANCE_IMPLEMENTATION.md  adversarial_pass.md  compliance_models_guide.md  database_schema.md  oauth2_developer_guide.md  railway-doppler-setup.md  rating_engine_architecture.md
docs/electron_conversion/: ELECTRON_OVERALL_ARCHITECTURE.md  ELECTRON_OVERALL_IMPLEMENTATION_PLAN.md  ELECTRON_OVERALL_PRD.md  ELECTRON_OVERALL_ROADMAP.md  ELECTRON_OVERALL_TECH_STACK.md
examples/: compliance_models_demo.py
migrations/: 000_create_base_users_table.sql  001_create_sso_tables.sql  002_monitoring_bootstrap.sql
pgbouncer/: pgbouncer.ini  userlist.txt
scripts/: __init__.py  add_license_notices.py  analyze-and-fix-imports.py  analyze_specific_violations.py  apply-pre-commit-fixes.sh  apply_performance_optimizations.py  audit_models.py  auto-dict-eliminator.py  auto-frozen-fixer.py  backup-and-recovery.sh  benchmark_rating_performance.py  benchmark_validation.py  check_db.py  check_redis.py  check_sso_data.py  check_sso_tables.py  cleanup_db_connections.py  configure_external_integrations.py  demo-quickstart.sh  demo_rating_calculator.py  demo_rating_engine.py  deploy-production.sh  fix-all-imports.py  fix-basemodel-imports.py  fix-frozen-models.py  fix-model-imports.py  fix-response-depends.py  fix-response-ordering.py  fix_python311_types.py  fix_test_python311_types.py  generate-gpg-keys-simple.sh  generate-gpg-keys.sh  git-commit-auto.sh  git-commit-robust.sh  git-commit-safe.sh  git-safe-operation.sh  init_database.py  init_db.py  install.sh  load_test_comprehensive.py  (+50 more)
settings/: risk_engine.yaml
src/pd_prime_demo/: __init__.py  main.py
src/pd_prime_demo/api/: __init__.py  dependencies.py  example_elite_pattern.py  response_patterns.py
src/pd_prime_demo/compliance/: __init__.py  audit_logger.py  availability_controls.py  confidentiality_controls.py  control_framework.py  control_testing.py  evidence_collector.py  privacy_controls.py  processing_integrity.py  security_controls.py
src/pd_prime_demo/core/: __init__.py  (+13 more)
src/policy_core/: __init__.py  main.py  py.typed  startup_strategy.py
src/toy_api_model/: main.py
stubs/: asyncpg.pyi
stubs/redis/: __init__.pyi  asyncio.pyi
tests/: README.md  conftest.py  test_toy_api_model.py
tests/data/: auth_risk_golden.csv
tests/fixtures/: __init__.py  test_data.py
tests/integration/: __init__.py  test_api.py  test_connection_pool_performance.py  test_database_performance.py  test_mfa_api.py  test_migrations.py  test_oauth2_compliance.py  test_sso_flows.py  test_sso_integration.py  test_websocket_integration.py
tests/unit/: test_admin_pricing.py  test_health_api.py  test_main.py  test_mfa.py  test_models.py  test_oauth2.py  test_pd_prime_demo.py  test_policy_core.py  test_rating_audit.py  test_rating_calculator.py  test_schemas.py  test_services.py  test_simple_rating.py  test_sso_comprehensive.py  test_websocket_manager.py
(+277 files in other folders)
